# medtech-ai-security

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  EXECUTION_PLAN.md  MULTITASK_GUIDE.md  NEXT_SESSION_CHECKLIST.md  NEXT_SESSION_TODO.md  PROJECT_SHOWCASE.md  PROJECT_SUMMARY.md  PROJECT_SUMMARY.md.archive  QUICKSTART.md  QUICKSTART_MULTITASK.md  QUICK_REFERENCE.md  README.md  SECURITY.md  SESSION_ACCOMPLISHMENTS.md  TECHNICAL_BRIEF.md  TROUBLESHOOTING.md  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  release-please-config.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  container-security.yml  docker.yml  docs.yml  release.yml  sbom.yml  security-scorecard.yml  tests.yml
config/templates/: attack.yaml  defense.yaml  experiment.yaml
configs/: brain_growth.yaml  brain_tumor.yaml  kidney.yaml  prostate.yaml
docs/: ARCHITECTURE.md  DATASETS.md  PIVOT_PLAN.md  THREAT_INTEL_USAGE.md  changelog.md  contributing.md  index.md
docs/api/: authentication.md  endpoints.md  overview.md
docs/deployment/: docker.md  kubernetes.md  production.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/modules/: adversarial.md  anomaly-detection.md  overview.md  risk-scoring.md  sbom-analysis.md  threat-intel.md
docs/templates/: FDA_PCCP_TEMPLATE.md  IEC_62443_ASSESSMENT_TEMPLATE.md
k8s/: README.md  configmap.yaml  deployment-anomaly-detector.yaml  deployment-sbom-analyzer.yaml  deployment-threat-intel.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  rbac.yaml  secret.yaml
monitoring/: prometheus.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
notebooks/: README.md
scripts/: README_DEMO.md  compare_models.py  create_synthetic_petct.py  demo.py  demo_security.py  download_data.py  download_tcia_pet.py  evaluate.py  evaluate_multitask.py  evaluate_petct_unet.py  explore_petct_data.py  generate_survival_data.py  inference.py  inference_with_uncertainty.py  monitor_training.py  optimize_model.py  profile_performance.py  test_petct_pipeline.py  train.py  train_multitask.py  train_petct_unet.py  visualize_petct.py
src/med_seg/: __init__.py
src/med_seg/data/: __init__.py  loader.py  petct_generator.py  petct_loader.py  petct_preprocessor.py  preprocessor.py  survival_generator.py
src/med_seg/evaluation/: __init__.py  ensemble.py  metrics.py
src/med_seg/models/: __init__.py  multitask_unet.py  unet.py
src/med_seg/training/: __init__.py  callbacks.py  losses.py  metrics.py  survival_losses.py  trainer.py
src/med_seg/utils/: __init__.py  config.py  visualization.py
src/medical_image_segmentation/: __init__.py
src/medtech_ai_security/: __init__.py
src/medtech_ai_security/adversarial/: __init__.py  attacks.py  defenses.py  evaluator.py
src/medtech_ai_security/anomaly/: __init__.py  detector.py  traffic_generator.py
src/medtech_ai_security/api/: __init__.py  auth.py  main.py
src/medtech_ai_security/capture/: __init__.py  dicom_capture.py  hl7_capture.py  traffic_analyzer.py
src/medtech_ai_security/cli/: __init__.py  main.py
src/medtech_ai_security/compliance/: __init__.py  iec62443.py
src/medtech_ai_security/config/: __init__.py  loader.py  schema.py
src/medtech_ai_security/dashboard/: __init__.py  server.py
src/medtech_ai_security/extractors/: __init__.py
src/medtech_ai_security/federated/: __init__.py  aggregator.py  client.py  privacy.py  server.py
src/medtech_ai_security/integration/: __init__.py  defectdojo.py
src/medtech_ai_security/ml/: __init__.py  bias_detection.py  data_poisoning.py  drift_detection.py  explainability.py  model_card.py  model_integrity.py  risk_scorer.py  rollback.py
src/medtech_ai_security/monitoring/: __init__.py  alerts.py  prometheus.py
src/medtech_ai_security/sbom_analysis/: __init__.py  analyzer.py  gnn_model.py  graph_builder.py  parser.py  risk_scorer.py
src/medtech_ai_security/threat_intel/: __init__.py  cisa_scraper.py  claude_processor.py  nvd_scraper.py
tests/: __init__.py  conftest.py  test_adversarial.py  test_analyzer_extended.py  test_anomaly.py  test_api.py  test_auth.py  test_bias_detection.py  test_capture.py  test_cli.py  test_config.py  test_dashboard.py  test_data.py  test_data_poisoning.py  test_defectdojo.py  test_drift_detection.py  test_evaluator_extended.py  test_explainability.py  test_federated.py  test_integration.py  test_losses.py  test_model_integrity.py  test_models.py  test_property_based.py  test_risk_scorer.py  test_rollback.py  test_sbom_analysis.py  test_threat_intel.py
tests/benchmarks/: __init__.py  test_bench_adversarial.py  test_bench_anomaly.py  test_bench_sbom.py
