[project]
name = "medtech-ai-security"
version = "1.1.0"
description = "AI-powered medical device cybersecurity: threat intelligence, vulnerability detection, and adversarial ML"
readme = "README.md"
authors = [
    { name = "David Dashti", email = "david.dashti@hermesmedical.com" }
]
requires-python = ">=3.10"
dependencies = [
    # Core ML/AI (from biomedical foundation)
    "tensorflow>=2.13.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
    "simpleitk>=2.3.0",
    "scikit-image>=0.21.0",
    "tqdm>=4.66.0",
    # Security/Threat Intelligence (Phase 1)
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    # ML Risk Scoring (Phase 2)
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "joblib>=1.3.0",
]
keywords = [
    "medical-device",
    "cybersecurity",
    "threat-intelligence",
    "vulnerability-detection",
    "adversarial-ml",
    "deep-learning",
    "medical-imaging",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "seaborn>=0.12.0",
]

[project.scripts]
medseg-train = "med_seg.scripts.train:main"
medseg-evaluate = "med_seg.scripts.evaluate:main"
medseg-inference = "med_seg.scripts.inference:main"
# Security CLI tools
medsec-nvd = "medtech_ai_security.threat_intel.nvd_scraper:main"
medsec-cisa = "medtech_ai_security.threat_intel.cisa_scraper:main"
medsec-enrich = "medtech_ai_security.threat_intel.claude_processor:main"
medsec-risk = "medtech_ai_security.ml.risk_scorer:main"

[project.urls]
Homepage = "https://github.com/Dashtid/medtech-ai-security"
Repository = "https://github.com/Dashtid/medtech-ai-security"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
