[project]
name = "medtech-ai-security"
version = "1.1.0"
description = "AI-powered medical device cybersecurity: threat intelligence, vulnerability detection, and adversarial ML"
readme = "README.md"
authors = [
    { name = "David Dashti", email = "david.dashti@hermesmedical.com" }
]
requires-python = ">=3.10"
dependencies = [
    # Core ML/AI (from biomedical foundation)
    "tensorflow>=2.13.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
    "simpleitk>=2.3.0",
    "scikit-image>=0.21.0",
    "tqdm>=4.66.0",
    # Security/Threat Intelligence (Phase 1)
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    # ML Risk Scoring (Phase 2)
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "joblib>=1.3.0",
]
keywords = [
    "medical-device",
    "cybersecurity",
    "threat-intelligence",
    "vulnerability-detection",
    "adversarial-ml",
    "deep-learning",
    "medical-imaging",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "seaborn>=0.12.0",
]

[project.scripts]
medseg-train = "med_seg.scripts.train:main"
medseg-evaluate = "med_seg.scripts.evaluate:main"
medseg-inference = "med_seg.scripts.inference:main"
# Security CLI tools
medsec-nvd = "medtech_ai_security.threat_intel.nvd_scraper:main"
medsec-cisa = "medtech_ai_security.threat_intel.cisa_scraper:main"
medsec-enrich = "medtech_ai_security.threat_intel.claude_processor:main"
medsec-risk = "medtech_ai_security.ml.risk_scorer:main"
# Anomaly Detection CLI tools (Phase 3)
medsec-traffic-gen = "medtech_ai_security.anomaly.traffic_generator:main"
medsec-anomaly = "medtech_ai_security.anomaly.detector:main"
# Adversarial ML CLI tools (Phase 4)
medsec-adversarial = "medtech_ai_security.adversarial.evaluator:main"
# SBOM Analysis CLI tools (Phase 5)
medsec-sbom = "medtech_ai_security.sbom_analysis.analyzer:main"

[project.urls]
Homepage = "https://github.com/Dashtid/medtech-ai-security"
Repository = "https://github.com/Dashtid/medtech-ai-security"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.coverage.run]
source = ["src/medtech_ai_security"]
branch = true
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 55
show_missing = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
extra_checks = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
