[project]
name = "medtech-ai-security"
version = "1.1.0"
description = "AI-powered medical device cybersecurity: threat intelligence, vulnerability detection, and adversarial ML"
readme = "README.md"
authors = [
    { name = "David Dashti", email = "david.dashti@hermesmedical.com" }
]
requires-python = ">=3.10"
dependencies = [
    # Core ML/AI
    "tensorflow>=2.13.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
    "simpleitk>=2.3.0",
    "scikit-image>=0.21.0",
    "tqdm>=4.66.0",
    # Security/Threat Intelligence (Phase 1)
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "defusedxml>=0.7.1",
    # ML Risk Scoring (Phase 2)
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "joblib>=1.3.0",
    # Configuration & Validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
    # CLI Enhancement
    "typer>=0.9.0",
    "rich>=13.0.0",
    # Authentication
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
]
keywords = [
    "medical-device",
    "cybersecurity",
    "threat-intelligence",
    "vulnerability-detection",
    "adversarial-ml",
    "deep-learning",
    "medical-imaging",
    "sbom",
    "supply-chain-security",
    "fda-compliance",
    "anomaly-detection",
    "graph-neural-network",
    "healthcare-security",
    "dicom",
    "hl7",
    "federated-learning",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-benchmark>=5.0.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.5.0",
    "pytest-rerunfailures>=14.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
    "types-beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "bandit>=1.7.0",
    "semgrep>=1.50.0",
    "memory-profiler>=0.61.0",
    # Test dependencies
    "hypothesis>=6.92.0",
    "faker>=22.0.0",
    "requests-mock>=1.11.0",
    # API testing (needed for test_api.py, test_auth.py, test_dashboard.py)
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "slowapi>=0.1.9",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "seaborn>=0.12.0",
]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "prometheus-client>=0.19.0",
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    # Rate limiting
    "slowapi>=0.1.9",
]

[project.scripts]
# Main CLI (Rich enhanced)
medtech-ai-security = "medtech_ai_security.cli:main"
medsec = "medtech_ai_security.cli:main"
# Security CLI tools
medsec-nvd = "medtech_ai_security.threat_intel.nvd_scraper:main"
medsec-cisa = "medtech_ai_security.threat_intel.cisa_scraper:main"
medsec-enrich = "medtech_ai_security.threat_intel.claude_processor:main"
medsec-risk = "medtech_ai_security.ml.risk_scorer:main"
# Anomaly Detection CLI tools (Phase 3)
medsec-traffic-gen = "medtech_ai_security.anomaly.traffic_generator:main"
medsec-anomaly = "medtech_ai_security.anomaly.detector:main"
# Adversarial ML CLI tools (Phase 4)
medsec-adversarial = "medtech_ai_security.adversarial.evaluator:main"
# SBOM Analysis CLI tools (Phase 5)
medsec-sbom = "medtech_ai_security.sbom_analysis.analyzer:main"
# Integration CLI tools
medsec-defectdojo = "medtech_ai_security.integration.defectdojo:main"
# API server
medsec-api = "medtech_ai_security.api.main:main"
# Dashboard
medsec-dashboard = "medtech_ai_security.dashboard.server:main"
# Live Traffic Capture
medsec-capture = "medtech_ai_security.capture.traffic_analyzer:main"
# Federated Learning
medsec-fed-server = "medtech_ai_security.federated.server:main"
medsec-fed-client = "medtech_ai_security.federated.client:main"

[project.urls]
Homepage = "https://github.com/Dashtid/medtech-ai-security"
Repository = "https://github.com/Dashtid/medtech-ai-security"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.coverage.run]
source = ["src/medtech_ai_security"]
branch = true
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 55
show_missing = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
extra_checks = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "requests.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (may require external services)",
    "security: Security-related tests (auth, RBAC, rate limiting)",
    "slow: Long-running tests (model training, large datasets)",
    "ml: Machine learning tests (requires numpy/sklearn)",
    "api: API endpoint tests (requires fastapi)",
    "drift: Drift detection tests",
    "poisoning: Data poisoning defense tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
